--- a/CO² - Footprinting/Main.html
+++ b/CO² - Footprinting/Main.html
@@ -2,13 +2,34 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fallstudie - CO² - Footprinting</title>
     <link rel="stylesheet" href="CSS.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <img src="Logo.png" alt="CO2">
 </head>
 <body>
     <h1>CO² - Footprinting</h1>
     <p>Länder im Internationalen Vergleich</p>
+    
+
+<ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Länder</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Ursachen</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Länder</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    </li>
+  </ul>
+  
+  
 
     <input type="text" id="searchInput" placeholder="Suche nach einem Land">
 
@@ -25,5 +46,9 @@
     </ul>
 
     <script src="JavaScript.js"></script>
+
+    <div class="footer">
+        <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutzerklärung</a></p>
+    </div>
 </body>
 </html>
