--- a/CO² - Footprinting/MerhInformationen.html
+++ b/CO² - Footprinting/MerhInformationen.html
@@ -33,18 +33,7 @@
 
     <input type="text" id="searchInput" placeholder="Suche nach einem Land">
 
-    <ul id="countryList">
-        <li>1. China</li>
-        <li>2. USA</li>
-        <li>3. Indien</li>
-        <li>4. Russland</li>
-        <li>5. Japan</li>
-        <li>6. Iran</li>
-        <li>7. Deutschland</li>
-        <li>8. Saudi-Arabien</li>
-        <li>9. Indonesien</li>
-        <li>10. Südkorea</li>
-    </ul>
+    <p>Mehr Informationen</p>
 
     <script src="JavaScript.js"></script>
 
