--- a/CO² - Footprinting/Statistik.html
+++ b/CO² - Footprinting/Statistik.html
@@ -29,22 +29,7 @@
     </li>
   </ul>
   
-  
-
-    <input type="text" id="searchInput" placeholder="Suche nach einem Land">
-
-    <ul id="countryList">
-        <li>1. China</li>
-        <li>2. USA</li>
-        <li>3. Indien</li>
-        <li>4. Russland</li>
-        <li>5. Japan</li>
-        <li>6. Iran</li>
-        <li>7. Deutschland</li>
-        <li>8. Saudi-Arabien</li>
-        <li>9. Indonesien</li>
-        <li>10. Südkorea</li>
-    </ul>
+        <h2>Neue Seite</h2>
 
     <script src="JavaScript.js"></script>
 
