--- a/CO² - Footprinting/Wachstum.html
+++ b/CO² - Footprinting/Wachstum.html
@@ -28,23 +28,22 @@
       <a class="nav-link active" href="MerhInformationen.html">Mehr Informationen</a>
     </li>
   </ul>
-  
-  
 
-    <input type="text" id="searchInput" placeholder="Suche nach einem Land">
+
+    <h2> Wachstum  </h2>
 
     <ul id="countryList">
-        <li>1. China</li>
-        <li>2. USA</li>
-        <li>3. Indien</li>
-        <li>4. Russland</li>
-        <li>5. Japan</li>
-        <li>6. Iran</li>
-        <li>7. Deutschland</li>
-        <li>8. Saudi-Arabien</li>
-        <li>9. Indonesien</li>
-        <li>10. Südkorea</li>
-    </ul>
+      <li>1. China</li>
+      <li>2. USA</li>
+      <li>3. Indien</li>
+      <li>4. Russland</li>
+      <li>5. Japan</li>
+      <li>6. Iran</li>
+      <li>7. Deutschland</li>
+      <li>8. Saudi-Arabien</li>
+      <li>9. Indonesien</li>
+      <li>10. Südkorea</li>
+   </ul>
 
     <script src="JavaScript.js"></script>
 
