--- a/CO² - Footprinting/Datenschutzerklärung.html
+++ b/CO² - Footprinting/Datenschutzerklärung.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fallstudie - CO² - Footprinting</title>
-    <link rel="stylesheet" href="CSS.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <img src="Logo.png" alt="CO2">
 </head>
 <body>
     <h1>CO² - Footprinting</h1>
-    <p>Länder im Internationalen Vergleich</p>
     
 
 <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link active" href="Main.html">Ranking</a>
+      <a class="nav-link active" href="index.html">Ranking</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="Statistik.html">Statistik</a>
@@ -28,28 +27,15 @@
       <a class="nav-link active" href="MerhInformationen.html">Mehr Informationen</a>
     </li>
   </ul>
-  
-  
 
-    <input type="text" id="searchInput" placeholder="Suche nach einem Land">
+  <h2>Datenschutzerklärung</h2>
 
-    <ul id="countryList">
-        <li>1. China</li>
-        <li>2. USA</li>
-        <li>3. Indien</li>
-        <li>4. Russland</li>
-        <li>5. Japan</li>
-        <li>6. Iran</li>
-        <li>7. Deutschland</li>
-        <li>8. Saudi-Arabien</li>
-        <li>9. Indonesien</li>
-        <li>10. Südkorea</li>
-    </ul>
+  <p> Hier könnte eine Datenschutzerklärung stehen.</p>
 
-    <script src="JavaScript.js"></script>
+    <script src="main.js"></script>
 
     <div class="footer">
-        <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutzerklärung</a></p>
+        <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="Datenschutzerklärung.html">Datenschutzerklärung</a></p>
     </div>
 </body>
 </html>
