--- a/CO² - Footprinting/MerhInformationen.html
+++ b/CO² - Footprinting/MerhInformationen.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fallstudie - CO² - Footprinting</title>
-    <link rel="stylesheet" href="CSS.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <img src="Logo.png" alt="CO2">
 </head>
 <body>
     <h1>CO² - Footprinting</h1>
-    <p>Länder im Internationalen Vergleich</p>
-    
 
 <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link active" href="Main.html">Ranking</a>
+      <a class="nav-link active" href="index.html">Ranking</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="Statistik.html">Statistik</a>
@@ -28,17 +26,18 @@
       <a class="nav-link active" href="MerhInformationen.html">Mehr Informationen</a>
     </li>
   </ul>
-  
-  
 
-    <input type="text" id="searchInput" placeholder="Suche nach einem Land">
+    <h2>Mehr Informationen</h2>
 
-    <p>Mehr Informationen</p>
+    <p> Erläuterungen: Koh­len­di­oxid­emis­si­onen aus ener­ge­ti­scher Nut­zung um­fas­sen den Aus­stoß in­folge der Ver­bren­nung fos­si­ler Brenn­stof­fe für die Ener­gie­ge­win­nung. 
+        Nicht ent­halt­en ist die Ver­bren­nung von Bio­mas­se und Holz sowie der in­ter­na­ti­onale See- und Flug­ver­kehr. 
+        Die CO2-Emis­si­onen wer­den an­hand der IEA -Ener­gie­bi­lan­zen, des IPCC-Sek­to­ral­an­sat­zes und der IPCC Default-Emis­si­ons­fak­to­ren der IPCC-Leit­li­ni­en für na­tio­nale Treib­haus­gas­in­ven­ta­re be­rech­net. 
+        Für die Be­rech­nung der Ton­nen CO2 je Ein­woh­ner/-in wur­de der Sek­to­ral­an­satz für CO2 und die Be­völ­ke­rung laut WDI und OECD ver­wen­det. </p>
 
-    <script src="JavaScript.js"></script>
+    <script src="main.js"></script>
 
     <div class="footer">
-        <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutzerklärung</a></p>
+        <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="Datenschutzerklärung.html">Datenschutzerklärung</a></p>
     </div>
 </body>
 </html>
