--- a/CO² - Footprinting/index.html
+++ b/CO² - Footprinting/index.html
@@ -4,30 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fallstudie - CO² - Footprinting</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <img src="Logo.png" alt="CO2">
 </head>
 <body>
+    <img src="Logo.png" alt="CO2">
+
     <h1>CO² - Footprinting</h1>
     
-<ul class="nav">
-    <li class="nav-item">
-      <a class="nav-link active" href="index.html">Ranking</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="Statistik.html">Statistik</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="Wachstum.html">Wachstum</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="MerhInformationen.html">Mehr Informationen</a>
-    </li>
-  </ul>
-  
-  
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="index.html">Ranking</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="Statistik.html">Statistik</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="Wachstum.html">Wachstum</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="MerhInformationen.html">Mehr Informationen</a>
+        </li>
+    </ul>
 
     <input type="text" id="searchInput" placeholder="Suche nach einem Land">
 
@@ -46,6 +44,7 @@
         <li>10. Südkorea</li>
     </ul>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 
     <div class="footer">
@@ -53,3 +52,6 @@
     </div>
 </body>
 </html>
+
+
+
