--- a/CO² - Footprinting/Datenschutzerklärung.html
+++ b/CO² - Footprinting/Datenschutzerklärung.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Fallstudie - CO² - Footprinting</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>CO² - Footprinting - Datenschutzerklärung</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <img src="Logo.png" alt="CO2">
 </head>
+
 <body>
     <h1>CO² - Footprinting</h1>
-    
 
-<ul class="nav">
-    <li class="nav-item">
-      <a class="nav-link active" href="index.html">Ranking</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="Statistik.html">Statistik</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="Wachstum.html">Wachstum</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="MerhInformationen.html">Mehr Informationen</a>
-    </li>
-  </ul>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="index.html">Ranking</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="Statistik.html">Statistik</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="Wachstum.html">Wachstum</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="MehrInformationen.html">Mehr Informationen</a>
+        </li>
+    </ul>
 
-  <h2>Datenschutzerklärung</h2>
+    <h2>Datenschutzerklärung</h2>
 
-  <p> Hier könnte eine Datenschutzerklärung stehen.</p>
+    <p>Hier könnte eine Datenschutzerklärung stehen.</p>
 
     <script src="main.js"></script>
 
@@ -38,4 +39,6 @@
         <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="Datenschutzerklärung.html">Datenschutzerklärung</a></p>
     </div>
 </body>
+
 </html>
+
