--- a/CO² - Footprinting/Wachstum.html
+++ b/CO² - Footprinting/Wachstum.html
@@ -1,58 +1,127 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Fallstudie - CO² - Footprinting</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>CO² - Footprinting - Wachstum</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <img src="Logo.png" alt="CO2">
 </head>
+
 <body>
     <h1>CO² - Footprinting</h1>
 
-<ul class="nav">
-    <li class="nav-item">
-      <a class="nav-link active" href="index.html">Ranking</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="Statistik.html">Statistik</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="Wachstum.html">Wachstum</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="MerhInformationen.html">Mehr Informationen</a>
-    </li>
-  </ul>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="index.html">Ranking</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="Statistik.html">Statistik</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="Wachstum.html">Wachstum</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="MehrInformationen.html">Mehr Informationen</a>
+        </li>
+    </ul>
 
-
-    <h2> Wachstum in Millionen Tonnen CO²</h2>
+    <h2>Wachstum in Millionen Tonnen CO²</h2>
     <p>Länder im Internationalen Vergleich</p>
 
     <ul id="Wachstum in Millionen Tonnen CO²-eq">
-     
-     <table>
-        <tr> <th>Rang </th> <th>Land </th> <th>1990 </th> <th>2000 </th> <th>2019 </th> </tr>
-        <tr> <th>1. </th> <th>China </th> <th>1.200 </th> <th>2.000 </th> <th>10.000 </th> </tr>
-        <tr> <th>2. </th> <th>USA </th> <th>1.100 </th> <th>1.900 </th> <th>8.000 </th> </tr>
-        <tr> <th>3. </th> <th>Indien </th> <th>1.000 </th> <th>1.800 </th> <th>6.000 </th> </tr>
-        <tr> <th>4. </th> <th>Russland </th> <th>900 </th> <th>1.700 </th> <th>5.000 </th> </tr>
-        <tr> <th>5. </th> <th>Japan </th> <th>800 </th> <th>1.600 </th> <th>4.000 </th> </tr>
-        <tr> <th>6. </th> <th>Iran </th> <th>700 </th> <th>1.500 </th> <th>3.000 </th> </tr>
-        <tr> <th>7. </th> <th>Deutschland </th> <th>600 </th> <th>1.400 </th> <th>2.000 </th> </tr>
-        <tr> <th>8. </th> <th>Saudi-Arabien </th> <th>500 </th> <th>1.000 </th> <th>1.500 </th> </tr>
-        <tr> <th>9. </th> <th>Indonesien </th> <th>400 </th> <th>900 </th> <th>1.400 </th> </tr>
-        <tr> <th>10. </th> <th>Südkorea </th> <th>300 </th> <th>800 </th> <th>1.350 </th> </tr>
-     </table>
-     
-   </ul>
+
+        <table>
+            <tr>
+                <th>Rang </th>
+                <th>Land </th>
+                <th>1990 </th>
+                <th>2000 </th>
+                <th>2019 </th>
+            </tr>
+            <tr>
+                <th>1. </th>
+                <th>China </th>
+                <th>1.200 </th>
+                <th>2.000 </th>
+                <th>10.000 </th>
+            </tr>
+            <tr>
+                <th>2. </th>
+                <th>USA </th>
+                <th>1.100 </th>
+                <th>1.900 </th>
+                <th>8.000 </th>
+            </tr>
+            <tr>
+                <th>3. </th>
+                <th>Indien </th>
+                <th>1.000 </th>
+                <th>1.800 </th>
+                <th>6.000 </th>
+            </tr>
+            <tr>
+                <th>4. </th>
+                <th>Russland </th>
+                <th>900 </th>
+                <th>1.700 </th>
+                <th>5.000 </th>
+            </tr>
+            <tr>
+                <th>5. </th>
+                <th>Japan </th>
+                <th>800 </th>
+                <th>1.600 </th>
+                <th>4.000 </th>
+            </tr>
+            <tr>
+                <th>6. </th>
+                <th>Iran </th>
+                <th>700 </th>
+                <th>1.500 </th>
+                <th>3.000 </th>
+            </tr>
+            <tr>
+                <th>7. </th>
+                <th>Deutschland </th>
+                <th>600 </th>
+                <th>1.400 </th>
+                <th>2.000 </th>
+            </tr>
+            <tr>
+                <th>8. </th>
+                <th>Saudi-Arabien </th>
+                <th>500 </th>
+                <th>1.000 </th>
+                <th>1.500 </th>
+            </tr>
+            <tr>
+                <th>9. </th>
+                <th>Indonesien </th>
+                <th>400 </th>
+                <th>900 </th>
+                <th>1.400 </th>
+            </tr>
+            <tr>
+                <th>10. </th>
+                <th>Südkorea </th>
+                <th>300 </th>
+                <th>800 </th>
+                <th>1.350 </th>
+            </tr>
+        </table>
+
+    </ul>
 
     <script src="main.js"></script>
 
     <div class="footer">
-        <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="Datenschutzerklärung.html">Datenschutzerklärung</a></p>
+        <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impress</a></p>
     </div>
 </body>
+
 </html>
+
