--- a/CO² - Footprinting/Impressum.html
+++ b/CO² - Footprinting/Impressum.html
@@ -12,20 +12,20 @@
 </head>
 
 <body>
-    <h1>CO² - Footprinting</h1>
+    <h1>EcoHarmony</h1>
 
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link active" href="index.html">Ranking</a>
+            <a class="nav-link active" href="index.html">Länder</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
+        </li>	
+	    <li class="nav-item">
             <a class="nav-link active" href="Statistik.html">Statistik</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="Wachstum.html">Wachstum</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="MehrInformationen.html">Mehr Informationen</a>
+            <a class="nav-link active" href="Überuns.html">Über Uns</a>
         </li>
     </ul>
 
