--- a/CO² - Footprinting/Statistik.html
+++ b/CO² - Footprinting/Statistik.html
@@ -14,26 +14,26 @@
 </head>
 
 <body>
-    <h1>CO² - Footprinting</h1>
+    <h1>EcoHarmony</h1>
 
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link active" href="index.html">Ranking</a>
+            <a class="nav-link active" href="index.html">Länder</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
+        </li>	
+	    <li class="nav-item">
             <a class="nav-link active" href="Statistik.html">Statistik</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="Wachstum.html">Wachstum</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="MerhInformationen.html">Mehr Informationen</a>
+            <a class="nav-link active" href="Überuns.html">Über Uns</a>
         </li>
     </ul>
 
-    <h3>Weltweiter Vergleich</h3>
+    <h2>Weltweiter Vergleich</h2>
 
-    <h2 class="chart-heading">Prozentualer CO²-Emissionsanteil nach Länder</h2>
+    <h3 class="chart-heading">Prozentualer CO²-Emissionsanteil nach Länder</h3>
     <div class="programming-stats">
         <div class="chart-container">
             <canvas class="my-chart"></canvas>
@@ -43,6 +43,18 @@
             <ul></ul>
         </div>
     </div>
+
+    <h3 class="chart-heading">Prozentualer CO²-Emissionsanteil nach Unternehmen</h3>
+    <div class="programming-stats">
+        <div class="chart-container">
+            <canvas class="company-chart"></canvas>
+        </div>
+    
+        <div class="details">
+            <ul class="company-details-list"></ul>
+        </div>
+    </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
