--- a/CO² - Footprinting/index.html
+++ b/CO² - Footprinting/index.html
@@ -10,26 +10,26 @@
 <body>
     <img src="Logo.png" alt="CO2">
 
-    <h1>CO² - Footprinting</h1>
+    <h1>EcoHarmony</h1>
     
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link active" href="index.html">Ranking</a>
+            <a class="nav-link active" href="index.html">Länder</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
+        </li>	
+	    <li class="nav-item">
             <a class="nav-link active" href="Statistik.html">Statistik</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="Wachstum.html">Wachstum</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="MerhInformationen.html">Mehr Informationen</a>
+            <a class="nav-link active" href="Überuns.html">Über Uns</a>
         </li>
     </ul>
 
-    <input type="text" id="searchInput" placeholder="Suche nach einem Land">
-
     <h2>Länder im Internationalen Vergleich</h2>
+
+    <input type="text" id="searchInput" placeholder="Suche nach einem Land">
 
     <ul id="countryList">
         <li>1. China</li>
@@ -44,7 +44,6 @@
         <li>10. Südkorea</li>
     </ul>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 
     <div class="footer">
@@ -52,6 +51,9 @@
     </div>
 </body>
 </html>
+
+
+
 
 
 
