--- a/CO² - Footprinting/EcoHarmony.html
+++ b/CO² - Footprinting/EcoHarmony.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="de">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>CO² - Footprinting - Mehr Informationen</title>
+    <title>EcoHarmony</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <img src="Logo.png" alt="CO2">
 </head>
-
 <body>
-    <h1>EcoHarmony</h1>
 
-    <ul class="nav">
-        <li class="nav-item">
-            <a class="nav-link active" href="index.html">Länder</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
-        </li>	
-	    <li class="nav-item">
-            <a class="nav-link active" href="Statistik.html">Statistik</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="Überuns.html">Über Uns</a>
-        </li>
-    </ul>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="Logo.png" alt="EcoHarmony Logo" width="75" height="50" class="d-inline-block align-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Länder</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
+                    </li>	
+                    <li class="nav-item">
+                        <a class="nav-link active" href="Statistik.html">Statistik</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="EcoHarmony.html">EcoHarmony</a>
+                    </li> 
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <div id="aboutUs">
-        <h1>Über uns - EcoHarmony</h1>
+    <div class="container mt-5">
+        <h1>Willkommen auf der EcoHarmony Webseite</h1>
+    </div>
+    
+    
+    <div class="aboutUs">
         <p>
-            Herzlich willkommen bei EcoHarmony!<br>
+            Herzlich willkommen bei EcoHarmony!
             EcoHarmony wurde mit der Überzeugung gegründet, dass wir alle eine Verantwortung für unseren Planeten tragen. Unsere Non-Profit-Organisation setzt sich leidenschaftlich für den Umweltschutz und den Kampf gegen den Klimawandel ein. Unser Ziel ist es, eine nachhaltige und harmonische Verbindung zwischen Mensch und Umwelt zu schaffen.<br>
             Wir glauben fest daran, dass jeder einzelne von uns eine Rolle dabei spielt, positive Veränderungen herbeizuführen. Bei EcoHarmony konzentrieren wir uns auf Aufklärung, Gemeinschaftsaktionen und praktische Lösungen, um gemeinsam eine bessere Zukunft zu gestalten.<br>
             Unsere Arbeit umfasst eine Vielzahl von Initiativen, darunter Aufforstungsprojekte, Bildungsprogramme, nachhaltige Lebensstilberatung und vieles mehr. Durch unsere engagierten Mitglieder und Partner streben wir danach, eine Welt zu schaffen, in der Mensch und Natur im Einklang miteinander existieren können.<br>
