--- a/CO² - Footprinting/Impressum.html
+++ b/CO² - Footprinting/Impressum.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
 <html lang="de">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>CO² - Footprinting - Impressum</title>
+    <title>EcoHarmony</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <img src="Logo.png" alt="CO2">
 </head>
-
 <body>
-    <h1>EcoHarmony</h1>
 
-    <ul class="nav">
-        <li class="nav-item">
-            <a class="nav-link active" href="index.html">Länder</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
-        </li>	
-	    <li class="nav-item">
-            <a class="nav-link active" href="Statistik.html">Statistik</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="Überuns.html">Über Uns</a>
-        </li>
-    </ul>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="Logo.png" alt="EcoHarmony Logo" width="75" height="50" class="d-inline-block align-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Länder</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
+                    </li>	
+                    <li class="nav-item">
+                        <a class="nav-link active" href="Statistik.html">Statistik</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="EcoHarmony.html">EcoHarmony</a>
+                    </li> 
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <script src="main.js"></script>
-
-    <h2>Impressum</h2>
+    <div class="container mt-5">
+        <h1>Impressum</h1>
+    </div>
 
     <p>Max Mustermann</p>
     <p>Beispielstr. 8 </p>
     <p>00000 Bayern</p>
     <p>Tel: 0123456789</p>
 
+    <script src="main.js"></script>
+
     <div class="footer">
         <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="Datenschutzerklärung.html">Datenschutzerklärung</a></p>
     </div>
+
 </body>
 
 </html>
