--- a/CO² - Footprinting/index.html
+++ b/CO² - Footprinting/index.html
@@ -3,46 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Fallstudie - CO² - Footprinting</title>
+    <title>EcoHarmony</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="Logo.png" alt="CO2">
 
-    <h1>EcoHarmony</h1>
-    
-    <ul class="nav">
-        <li class="nav-item">
-            <a class="nav-link active" href="index.html">Länder</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
-        </li>	
-	    <li class="nav-item">
-            <a class="nav-link active" href="Statistik.html">Statistik</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="Überuns.html">Über Uns</a>
-        </li>
-    </ul>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="Logo.png" alt="EcoHarmony Logo" width="75" height="50" class="d-inline-block align-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Länder</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
+                    </li>	
+                    <li class="nav-item">
+                        <a class="nav-link active" href="Statistik.html">Statistik</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="EcoHarmony.html">EcoHarmony</a>
+                    </li> 
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <h2>Länder im Internationalen Vergleich</h2>
+    <div class="container mt-5">
+        <h1>Länder im Internationalen Verlgeich</h1>
+    </div>
 
     <input type="text" id="searchInput" placeholder="Suche nach einem Land">
 
-    <ul id="countryList">
-        <li>1. China</li>
-        <li>2. USA</li>
-        <li>3. Indien</li>
-        <li>4. Russland</li>
-        <li>5. Japan</li>
-        <li>6. Iran</li>
-        <li>7. Deutschland</li>
-        <li>8. Saudi-Arabien</li>
-        <li>9. Indonesien</li>
-        <li>10. Südkorea</li>
-    </ul>
+    <div>
+        <ul id="countryList">
+            <li>1. China</li>
+            <li>2. USA</li>
+            <li>3. Indien</li>
+            <li>4. Russland</li>
+            <li>5. Japan</li>
+            <li>6. Iran</li>
+            <li>7. Deutschland</li>
+            <li>8. Saudi-Arabien</li>
+            <li>9. Indonesien</li>
+            <li>10. Südkorea</li>
+        </ul>
+    </div>
 
     <script src="main.js"></script>
 
@@ -51,6 +64,8 @@
     </div>
 </body>
 </html>
+
+
 
 
 
