--- a/CO² - Footprinting/Statistik.html
+++ b/CO² - Footprinting/Statistik.html
@@ -11,7 +11,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="EcoHarmony.html">
                 <img src="Logo.png" alt="EcoHarmony Logo" width="75" height="50" class="d-inline-block align-top">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,43 +67,54 @@
     <div class="container mt-5">
         <h1>Tabelle</h1>
 
+        <input type="text" id="searchInput" placeholder="Suche">
+
     <div class="Tabelle">
         <table>
             <tr>
               <th>Company</th>
-              <th>Contact</th>
               <th>Country</th>
             </tr>
             <tr>
-              <td>Alfreds Futterkiste</td>
-              <td>Maria Anders</td>
-              <td>Germany</td>
+              <td>China Coal</td>
+              <td>China</td>
             </tr>
             <tr>
-              <td>Centro comercial Moctezuma</td>
-              <td>Francisco Chang</td>
+              <td>Saudi Arabian Oil Company (Aramco)</td>
+              <td>Saudi-Arabien</td>
+            </tr>
+            <tr>
+              <td>Ganzprom OAO</td>
+              <td>Russland</td>
+            </tr>
+            <tr>
+              <td>National Iranian Oil Co</td>
+              <td>Iran</td>
+            </tr>
+            <tr>
+              <td>ExxonMobil Copr</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Coal India</td>
+              <td>Indien</td>
+            </tr>
+            <tr>
+              <td>Petroleos Mexicanos</td>
               <td>Mexico</td>
             </tr>
             <tr>
-              <td>Ernst Handel</td>
-              <td>Roland Mendel</td>
-              <td>Austria</td>
+              <td>Russia Coal</td>
+              <td>Russland</td>
             </tr>
             <tr>
-              <td>Island Trading</td>
-              <td>Helen Bennett</td>
-              <td>UK</td>
-            </tr>
-            <tr>
-              <td>Laughing Bacchus Winecellars</td>
-              <td>Yoshi Tannamuri</td>
-              <td>Canada</td>
-            </tr>
-            <tr>
-              <td>Magazzini Alimentari Riuniti</td>
-              <td>Giovanni Rovelli</td>
-              <td>Italy</td>
-            </tr>
+              <td>Royal Dutch Shell PLC</td>
+              <td>England</td>
+             </tr>
+             <tr>
+              <td>China National Petroleum Corp</td>
+              <td>China</td>
+             </tr>
           </table>
     </div>
 
