--- a/CO² - Footprinting/EcoHarmony.html
+++ b/CO² - Footprinting/EcoHarmony.html
@@ -11,7 +11,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="EcoHarmony.html">
                 <img src="Logo.png" alt="EcoHarmony Logo" width="75" height="50" class="d-inline-block align-top">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,16 +42,14 @@
     
     
     <div class="aboutUs">
-        <p>
-            Herzlich willkommen bei EcoHarmony!
             EcoHarmony wurde mit der Überzeugung gegründet, dass wir alle eine Verantwortung für unseren Planeten tragen. Unsere Non-Profit-Organisation setzt sich leidenschaftlich für den Umweltschutz und den Kampf gegen den Klimawandel ein. Unser Ziel ist es, eine nachhaltige und harmonische Verbindung zwischen Mensch und Umwelt zu schaffen.<br>
             Wir glauben fest daran, dass jeder einzelne von uns eine Rolle dabei spielt, positive Veränderungen herbeizuführen. Bei EcoHarmony konzentrieren wir uns auf Aufklärung, Gemeinschaftsaktionen und praktische Lösungen, um gemeinsam eine bessere Zukunft zu gestalten.<br>
             Unsere Arbeit umfasst eine Vielzahl von Initiativen, darunter Aufforstungsprojekte, Bildungsprogramme, nachhaltige Lebensstilberatung und vieles mehr. Durch unsere engagierten Mitglieder und Partner streben wir danach, eine Welt zu schaffen, in der Mensch und Natur im Einklang miteinander existieren können.<br>
             EcoHarmony setzt auf Transparenz, Zusammenarbeit und den Glauben daran, dass selbst kleine Handlungen eine große Wirkung haben können. Jeder, der sich uns anschließt, wird Teil einer Bewegung, die darauf abzielt, die Herausforderungen des Klimawandels zu bewältigen und einen positiven Einfluss auf unseren Planeten auszuüben.<br>
             Vielen Dank, dass Sie sich die Zeit genommen haben, mehr über EcoHarmony zu erfahren. Wir laden Sie herzlich ein, Teil unserer Gemeinschaft zu werden und gemeinsam den Weg zu einer nachhaltigen und harmonischen Zukunft zu gestalten.
-        </p>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 
     <div class="footer">
