--- a/CO² - Footprinting/Impressum.html
+++ b/CO² - Footprinting/Impressum.html
@@ -11,7 +11,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="EcoHarmony.html">
                 <img src="Logo.png" alt="EcoHarmony Logo" width="75" height="50" class="d-inline-block align-top">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,10 +40,11 @@
         <h1>Impressum</h1>
     </div>
 
-    <p>Max Mustermann</p>
-    <p>Beispielstr. 8 </p>
-    <p>00000 Bayern</p>
-    <p>Tel: 0123456789</p>
+    <p>EcoHarmony</p>
+    <p>Konstantin Lepschy</p>
+    <p>Hainwg 16 </p>
+    <p>87727 Babenhausen</p>
+    <p>Matrikelnummer: 32007477</p>
 
     <script src="main.js"></script>
 
