--- a/CO² - Footprinting/Unternehmen.html
+++ b/CO² - Footprinting/Unternehmen.html
@@ -57,8 +57,8 @@
     </ul>
 </div>
     
-   
-    <script src="main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="main.js"></script>
 
     <div class="footer">
         <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="Datenschutzerklärung.html">Datenschutzerklärung</a></p>
