--- a/CO² - Footprinting/EcoHarmony.html
+++ b/CO² - Footprinting/EcoHarmony.html
@@ -6,6 +6,7 @@
     <title>EcoHarmony</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -49,7 +50,7 @@
             Vielen Dank, dass Sie sich die Zeit genommen haben, mehr über EcoHarmony zu erfahren. Wir laden Sie herzlich ein, Teil unserer Gemeinschaft zu werden und gemeinsam den Weg zu einer nachhaltigen und harmonischen Zukunft zu gestalten.
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
 
     <div class="footer">
