--- a/CO² - Footprinting/Impressum.html
+++ b/CO² - Footprinting/Impressum.html
@@ -46,6 +46,7 @@
     <p>87727 Babenhausen</p>
     <p>Matrikelnummer: 32007477</p>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
 
     <div class="footer">
