--- a/CO² - Footprinting/index.html
+++ b/CO² - Footprinting/index.html
@@ -57,6 +57,7 @@
         </ul>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
 
     <div class="footer">
