--- a/CO² - Footprinting/Statistik.html
+++ b/CO² - Footprinting/Statistik.html
@@ -48,48 +48,70 @@
     <div class="Tabelle">
         <table>
             <tr>
-              <th>Company</th>
-              <th>Country</th>
+              <th>Rang</th>
+              <th>Firma</th>
+              <th>Land</th>
+              <th>Jährlich in Mio. Tonnen</th>
             </tr>
             <tr>
+              <td>1.</td>
               <td>China Coal</td>
               <td>China</td>
+              <td>1000</td>
             </tr>
             <tr>
+              <td>2.</td>
               <td>Saudi Arabian Oil Company (Aramco)</td>
               <td>Saudi-Arabien</td>
+              <td>900</td>
             </tr>
             <tr>
+              <td>3.</td>
               <td>Ganzprom OAO</td>
               <td>Russland</td>
+              <td>800</td>
             </tr>
             <tr>
+              <td>4.</td>
               <td>National Iranian Oil Co</td>
               <td>Iran</td>
+              <td>700</td>
             </tr>
             <tr>
+              <td>5.</td>
               <td>ExxonMobil Copr</td>
               <td>USA</td>
+              <td>600</td>
             </tr>
             <tr>
+              <td>6.</td>
               <td>Coal India</td>
               <td>Indien</td>
+              <td>500</td>
             </tr>
             <tr>
+              <td>7.</td>
               <td>Petroleos Mexicanos</td>
               <td>Mexico</td>
+              <td>400</td>
             </tr>
             <tr>
+              <td>8.</td>
               <td>Russia Coal</td>
               <td>Russland</td>
+              <td>300</td>
             </tr>
             <tr>
+              <td>9.</td>
               <td>Royal Dutch Shell PLC</td>
               <td>England</td>
+              <td>200</td>
              </tr>
              <tr>
+              <td>10.</td>
               <td>China National Petroleum Corp</td>
               <td>China</td>
+              <td>100</td>
              </tr>
           </table>
     </div>
